--- a/Sudoku.html
+++ b/Sudoku.html
@@ -12,6 +12,114 @@
             <li>sudoku 3x3</li>
         </lo>
     </nav>
+    <article>
+        <table class="sudoku">
+            <tbody>
+                <tr id="a">
+                    <td id="a1">1</td>
+                    <td id="a2">2</td>
+                    <td id="a3">3</td>
+                    <td id="a4">4</td>
+                    <td id="a5">5</td>
+                    <td id="a6">6</td>
+                    <td id="a7">7</td>
+                    <td id="a8">8</td>
+                    <td id="a9">9</td>
+                </tr>
+                <tr id="b">
+                    <td id="b1">1</td>
+                    <td id="b2"></td>
+                    <td id="b3"></td>
+                    <td id="b4"></td>
+                    <td id="b5"></td>
+                    <td id="b6"></td>
+                    <td id="b7"></td>
+                    <td id="b8"></td>
+                    <td id="b9"></td>
+                </tr>
+                <tr id="c">
+                    <td id="c1">1</td>
+                    <td id="c2"></td>
+                    <td id="c3"></td>
+                    <td id="c4"></td>
+                    <td id="c5"></td>
+                    <td id="c6"></td>
+                    <td id="c7"></td>
+                    <td id="c8"></td>
+                    <td id="c9"></td>
+                </tr>
+                <tr id="d">
+                    <td id="d1">1</td>
+                    <td id="d2"></td>
+                    <td id="d3"></td>
+                    <td id="d4"></td>
+                    <td id="d5"></td>
+                    <td id="d6"></td>
+                    <td id="d7"></td>
+                    <td id="d8"></td>
+                    <td id="d9"></td>
+                </tr>
+                <tr id="e">
+                    <td id="e1">1</td>
+                    <td id="e2"></td>
+                    <td id="e3"></td>
+                    <td id="e4"></td>
+                    <td id="e5"></td>
+                    <td id="e6"></td>
+                    <td id="e7"></td>
+                    <td id="e8"></td>
+                    <td id="e9"></td>
+                </tr>
+                <tr id="f">
+                    <td id="f1">1</td>
+                    <td id="f2"></td>
+                    <td id="f3"></td>
+                    <td id="f4"></td>
+                    <td id="f5"></td>
+                    <td id="f6"></td>
+                    <td id="f7"></td>
+                    <td id="f8"></td>
+                    <td id="f9"></td>
+                </tr>
+                <tr id="g">
+                    <td id="g1"></td>
+                    <td id="g2"></td>
+                    <td id="g3"></td>
+                    <td id="g4"></td>
+                    <td id="g5"></td>
+                    <td id="g6"></td>
+                    <td id="g7"></td>
+                    <td id="g8"></td>
+                </tr>
+                <tr id="h">
+                    <td id="h1">1</td>
+                    <td id="h2"></td>
+                    <td id="h3"></td>
+                    <td id="h4"></td>
+                    <td id="h5"></td>
+                    <td id="h6"></td>
+                    <td id="h7"></td>
+                    <td id="h8"></td>
+                    <td id="h9"></td>
+                </tr>
+                <tr id="i">
+                    <td id="i1">1</td>
+                    <td id="i2">2</td>
+                    <td id="i3"></td>
+                    <td id="i4"></td>
+                    <td id="i5"></td>
+                    <td id="i6"></td>
+                    <td id="i7"></td>
+                    <td id="i8"></td>
+                    <td id="i9"></td>
+                </tr>
+            </tbody>
+        </table>
+    </article>
+
+    <script>
+
+    </script>
     
 </body>
 </html>
