tabela - losowe liczby w losowych miejscach
W randomowych miejscach wyświetlają się losowe liczby. Na razie nie są poprawne, ale zakomentowana jest niedokończona funkcja sprawdzająca. Trzeba zrobić

--- a/Sudoku.html
+++ b/Sudoku.html
@@ -58,8 +58,20 @@
 
                 for (var i = 1; i <= z; i++) {
                     var cell = document.createElement("td");
-                    var cellText = document.createTextNode(j + ", " + i);
-                    cell.appendChild(cellText);
+                    var rPlace = Math.floor((Math.random() * (9) + 1))*1;
+                    if (rPlace == i){
+                        var rNumber = Math.floor((Math.random() * (9) + 1))*1;
+                        //Check(rNumber,i,j); ---------------------------------------------------------------------------------
+                        // while (Check(rNumber,i,j) != true){
+                        //     rNumber = Math.floor((Math.random() * (9) + 1))*1;
+                        // }
+                        var cellText = document.createTextNode(rNumber);
+                        cell.appendChild(cellText);
+                    }
+                    else{
+
+                    }
+                    
                     row.appendChild(cell);
                     cell.style.cssText = `
                         border-spacing: 0;
@@ -109,10 +121,18 @@
             // `
 
         }
-
-
+        // function Check(rNumber,column,row){
+        //     if (Row(rNumber,column) == true && Column(rNumber,row) == true && Square(rNumber) == true){ //kwadrat - square
+        //         return true;
+        //     }
+        //     else
+        //         return false;
         // }
+        // function Row (rNumber,column){
+        //     for (i = 1; i < column; i++){
 
+        //     }
+        // }
 
     </script>
 
