--- a/Index.html
+++ b/Index.html
@@ -155,7 +155,7 @@
         //         if (tablica[row][i] == rNumber) {
         //             console.log("false1");
         //             return false;
-        //         }
+        //         } AYO 2137
         //     }
         //     return true;
         // }
